<resources>
    <string name="app_name">B2BApp</string>
    <string name="logo_name">#LiveCommerce Enabler</string>
    <string name="signup_logo_heading"># Livecommerce</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="termsandconditions">Terms &amp; Conditions</string>
    <string name="signup">SignUp</string>
    <string name="alreadyhaveaccount">Do you already know DegPeg?</string>
    <string name="login">Login</string>
    <string name="emailtext">Enter Mail</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="skip">Skip</string>
    <string name="newtodegpeg">Are you new to Degpeg?</string>
    <string name="submit">Submit</string>
    <string name="verificationcode">Enter the 5 Digit Verification Code sent on your Register Mail Id.</string>
    <string name="enterotp">Enter OTP</string>
    <string name="verifyotp">Verify OTP</string>
    <string name="newpassword">New Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="done">Done</string>
    <string name="splash_title_one">Simplified Live Commerce</string>
    <string name="splash_content_one">Leverage the power of live \n commerce from your phone</string>
    <string name="splash_title_two">Multi  Streaming</string>
    <string name="splash_content_two">Reach all your social media followers \n in one live session</string>
    <string name="splash_title_three">Engage your Customers</string>
    <string name="splash_content_three">Schedule your live events to alert \n audience in advance</string>
    <string name="enter_your_name">Please Enter Your Name.</string>
    <string name="enter_your_email">Please Enter Your Email.</string>
    <string name="enter_password">Please Enter Password.</string>
    <string name="enter_your_phone">Please Enter Your Phone.</string>
    <string name="otp_success">Registration Success.</string>
    <string name="otp_failure">Your OTP did\'nt match with our records.</string>
    <string name="otp_error_message">Please enter otp to continue</string>
    <string name="valid_email">Please enter valid email</string>
    <string name="valid_password">"Password is too weak"</string>
    <string name="login_success">Login Successfully!</string>
    <string name="login_error">Invalid email or password.</string>
    <string name="reset_password_email_sent">Reset Password email sent.</string>
    <string name="reset_password_success_message">Reset Password Success.</string>
    <string name="home">Home</string>
    <string name="sessions">Sessions</string>
    <string name="channels">Channels</string>
    <string name="studio">Studio</string>
    <string name="calender">Calender</string>
    <string name="chat">Chat</string>
    <string name="analytics">Analytics</string>
    <string name="faqs">FAQs</string>
    <string name="degpeg_title">Degpeg</string>
    <string name="live">Live</string>
    <string name="upcommingsessions">Up Comming Sessions</string>
    <string name="viewall">View all</string>
    <string name="selectedchannels">Selected Channels</string>
    <string name="upcoming">Upcoming</string>
    <string name="golive">GO LIVE</string>
    <string name="facebook">Facebook</string>
    <string name="createsessions">Create Sessions</string>
    <string name="sessiontext">All info will be used as the preset in the next step</string>
    <string name="sessionname">Session Name*</string>
    <string name="addyoursessionname">Add Your Session Name</string>
    <string name="description">Description</string>
    <string name="addastreamdescription">Add a stream Discription (Optional)</string>
    <string name="dateandtime">Date &amp; Time*</string>
    <string name="selectthedateandtime">Select the Date &amp; Time</string>
    <string name="sessiontype">Session Type*</string>
    <string name="choosesessiontype">Choose session type</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="uploadimage">Upload Image</string>
    <string name="next">Next</string>
    <string name="addsession">Add Session</string>
    <string name="all">All</string>
    <string name="completed">Completed</string>
</resources>