<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_session_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:drawablePadding="10dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:drawableLeft="@drawable/add_btn"
        android:gravity="center"
        android:fontFamily="@font/nunito_medium"
        android:padding="15dp"
        android:text="@string/addsession"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito_medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upcoming"
            android:layout_weight="1"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito_medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed"
            android:layout_weight="1"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito_medium"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/linecolor"/>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"/>

</LinearLayout>