<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/session_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/menu_back_btn"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/createsessions"
            android:textColor="@color/red"
            android:gravity="center_horizontal|center_vertical"
            android:fontFamily="@font/nunito_bold"
            android:textSize="18sp"/>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sessiontext"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito_medium"
                android:textSize="20sp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sessionname"
                    android:textColor="#686868"
                    android:textSize="15sp"
                    android:fontFamily="@font/nunito_regular"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:hintTextAppearance="@style/HintTextInputLayout">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/addyoursessionname"
                            android:inputType="text"
                            android:padding="10dp"
                            android:textColor="@color/edittext_text_color" />
                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="#686868"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/nunito_regular"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:hintTextAppearance="@style/HintTextInputLayout">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:background="@android:color/transparent"
                            android:hint="@string/addastreamdescription"
                            android:inputType="text"
                            android:padding="10dp"
                            android:gravity="center_vertical"
                            android:textColor="@color/edittext_text_color" />
                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dateandtime"
                    android:textColor="#686868"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/nunito_regular"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:hintTextAppearance="@style/HintTextInputLayout">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/selectthedateandtime"
                            android:inputType="text"
                            android:padding="10dp"
                            android:gravity="center_vertical"
                            android:drawableRight="@drawable/time_icon"
                            android:textColor="@color/edittext_text_color" />
                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sessiontype"
                    android:textColor="#686868"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/nunito_regular"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:hintTextAppearance="@style/HintTextInputLayout">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/choosesessiontype"
                            android:inputType="text"
                            android:padding="10dp"
                            android:gravity="center_vertical"
                            android:drawableRight="@drawable/drop_down_image"
                            android:textColor="@color/edittext_text_color" />
                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thumbnail"
                    android:textColor="#686868"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/nunito_regular"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:hintTextAppearance="@style/HintTextInputLayout">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/uploadimage"
                            android:inputType="text"
                            android:padding="10dp"
                            android:gravity="center_vertical"
                            android:drawableRight="@drawable/upload_image"
                            android:drawableTint="#B9B9B9"
                            android:textColor="@color/edittext_text_color" />
                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button"
                    android:drawableRight="@drawable/next_btn"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
            </LinearLayout>
        </LinearLayout>


    </ScrollView>



</LinearLayout>