<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/layoutbackground">


    <RelativeLayout
        android:id="@+id/toolbar_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="99dp"
            android:layout_height="47dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:src="@drawable/degpeg_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="@string/signup_logo_heading"
            android:textColor="@color/red" />
    </RelativeLayout>


            <RelativeLayout
                android:id="@+id/login_body"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/toolbar_header">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="30dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="10dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintTextAppearance="@style/HintTextInputLayout">

                            <EditText
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:hint="@string/emailtext"
                                android:inputType="textEmailAddress"
                                android:padding="10dp"
                                android:textColor="@color/edittext_text_color" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:cardCornerRadius="10dp">

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:padding="10dp"
                                android:textColor="@color/edittext_text_color" />

                            <ImageView
                                android:id="@+id/show_pass_btn"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="5dp"
                                android:alpha=".5"
                                android:onClick="ShowHidePass"
                                android:padding="5dp"
                                android:src="@drawable/eye" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/forgot_password_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="20dp"
                        android:text="@string/forgotpassword"
                        android:textColor="@color/red"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/show_login_error_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/error_message_drawable"
                        android:gravity="center"
                        android:padding="15dp"
                        android:visibility="gone"
                        android:text="@string/signup"
                        android:textColor="@color/error_message"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/login_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/button"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/skip_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:text="@string/skip"
                        android:textColor="@color/red"
                        android:textSize="14sp" />


                </LinearLayout>
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/login_footer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_above="@id/login_body"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/newtodegpeg"
                        android:textColor="#000000"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/signup_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/signup"
                        android:textColor="@color/red"
                        android:textSize="14sp" />
                </LinearLayout>
            </RelativeLayout>


</RelativeLayout>